# wagtail-testing

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  fabfile.py  manage.py  pyproject.toml  setup.cfg
.github/workflows/: codeql.yml  main.yml
wagtail_testing/: urls.py
wagtail_testing/home/: factories.py
wagtail_testing/home/tests/: test_factories.py
wagtail_testing/images/: apps.py
wagtail_testing/images/migrations/: 0001_initial.py  0003_alter_customimage_file_hash.py
wagtail_testing/search/: test.py
wagtail_testing/settings/: base.py  dev.py  test.py
wagtail_testing/standardpages/: apps.py  models.py
wagtail_testing/standardpages/migrations/: 0001_initial.py  0002_remove_informationpagerelatedpage.py  0003_alter_informationpage_body.py
wagtail_testing/standardpages/templates/standardpages/: information_page.html
wagtail_testing/standardpages/tests/: test_factories.py  test_models.py
wagtail_testing/templates/: 404.html  base.html
wagtail_testing/templates/streamfield/blocks/: image_block.yaml
wagtail_testing/utils/: apps.py  blocks.py  cache.py  context_processors.py  factories.py  models.py
wagtail_testing/utils/migrations/: 0001_initial.py  0003_add_pagerelatedpage.py  0004_alter_socialmediasettings_site_name.py
wagtail_testing/utils/templatetags/: querystring_modify.py  reading_time_tags.py  util_tags.py
wagtail_testing/utils/tests/: test_factories.py  test_models.py  test_util_tags.py  test_views.py
wagtail_testing/wagtail_testing/: wsgi.py
wagtail_testing/wagtail_testing/settings/: base.py
